tests/rosetta/out/C/average-loop-length.error
cc: exit status 1
/tmp/average-loop-length.c:73:8: warning: conflicting types for built-in function ‘floorf’; expected ‘float(float)’ [-Wbuiltin-declaration-mismatch]
   73 | double floorf(double x) { return (double)(((int)(x))); }
      |        ^~~~~~
/tmp/average-loop-length.c:6:1: note: ‘floorf’ is declared in header ‘<math.h>’
    5 | #include <string.h>
  +++ |+#include <math.h>
    6 | 
/tmp/average-loop-length.c: In function ‘mochi_main’:
/tmp/average-loop-length.c:178:31: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  178 |     char *line = padInt(n, 3) + "  " + padFloat(a, 9) + "  " + padFloat(b, 12) +
      |                  ~~~~~~~~~~~~ ^
      |                  |            |
      |                  char *       char *
